force-app/main/default/objects/CB_Compliance_Document__c/CB_Compliance_Document__c.object-meta.xml
<CustomObject>
    <description>KYC/KYB evidence documents</description>
    <label>CB Compliance Document</label>
    <nameField>
        <label>CB Compliance Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Compliance Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>