force-app/main/default/objects/CB_Compliance_Document__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CB Compliance Documents</relationshipLabel>
    <relationshipName>CB_Compliance_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>