force-app/main/default/objects/CB_Compliance_Document__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>