force-app/main/default/objects/CB_Compliance_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>POI</fullName><default>false</default><label>POI</label></value><value><fullName>POA</fullName><default>false</default><label>POA</label></value><value><fullName>Incorporation_Certificate</fullName><default>false</default><label>Incorporation_Certificate</label></value><value><fullName>Articles</fullName><default>false</default><label>Articles</label></value><value><fullName>PSC_Register</fullName><default>false</default><label>PSC_Register</label></value><value><fullName>Board_Resolution</fullName><default>false</default><label>Board_Resolution</label></value><value><fullName>Statutory_Accounts</fullName><default>false</default><label>Statutory_Accounts</label></value><value><fullName>Other</fullName><default>false</default><label>Other</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>