force-app/main/default/objects/CB_Compliance_Document__c/fields/Onboarding_Application__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Application__c</fullName>
    <label>Onboarding Application</label>
    <referenceTo>CB_Onboarding_Application__c</referenceTo>
    <relationshipLabel>CB Compliance Documents</relationshipLabel>
    <relationshipName>CB_Compliance_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>