force-app/main/default/objects/CB_Compliance_Document__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Required</fullName><default>false</default><label>Required</label></value><value><fullName>Received</fullName><default>false</default><label>Received</label></value><value><fullName>Verified</fullName><default>false</default><label>Verified</label></value><value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>